# streamingbandit

./: .gitignore  Dockerfile  Gruntfile.js  LICENSE  README.md  bower.json  docker-compose.front-end.yml  docker-compose.yml  insert_admin.py  package.json  pyproject.toml  requirements.txt  setup.py
app/: .gitignore  app.py  config.cfg  setup.py
app/core/: experiment.py  jobs.py
app/db/: advice.py  advicelog.py  database.py  mongolog.py  users.py
app/defaults/: empty.py  eval_setreward.py  rand_setreward.py  scikit_setreward.py  tbl_getaction.py
app/defaults/AB_Test/: get_action.py  get_reward.py  set_reward.py
app/defaults/Bootstrapped_Thompson_Sampling/: getContext.py  getReward.py  (+4 more)
app/handlers/: adminhandlers.py  basehandler.py  corehandlers.py  docshandlers.py  evalhandlers.py  loginhandlers.py  managementhandlers.py  statshandlers.py
app/libs/: base.py  bts.py  defaults.json  experiment.py  lif.py  lm.py  scikit.py  thompson.py  thompson_bayes_linear.py  thompson_bayesian_linear.py  tools.py
app/templates/: _footer.html  _navigation.html  _styles.html  index.html  login.html  management.html  reference.html
docs/: .buildinfo  admin.html  api.html  core.html  eval.html  exp.html  genindex.html  how-to-build.txt  http-routingtable.html  index.html  install.html  libs.html  login.html  management.html  objects.inv  py-modindex.html  search.html  searchindex.js  stats.html
docs/_sources/: admin.rst.txt  api.rst.txt  core.rst.txt  exp.rst.txt  index.rst.txt  install.rst.txt  libs.rst.txt  stats.rst.txt
docs/source/: Makefile  admin.rst  api.rst  conf.py  eval.rst  exp.rst  index.rst  install.rst  libs.rst  management.rst  stats.rst
tests/: conftest.py  test_infrastructure.py
utils/: README  offline_evaluation.py  plot_offline_evaluation.py  plot_rewards.py  plot_simulation_results.py  regret_plot.py  simulation_runs.py
utils/agents/: agentAB.py  agent_abc..test.py  agent_scikit.py  agent_thomp.py  bts_agent.py  jss_agent.py  lif_agent.py  offline_evaluation.py  persuasive2016.py  random_field_exp_agent.py  simulation.py  simulation_runs.py  thompson_bernoulli_agent.py  thompson_opt_sampling_agent.py
(+68 files in other folders)
